change the div element into the main semantic element and within the element along with css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ section {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -134,7 +134,7 @@ section {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+main nav {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
