--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,17 +86,7 @@ aside {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
+aside figure {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -134,7 +124,7 @@ aside {
     max-width: 150px;
 }
 
-main nav {
+main figure {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -177,6 +167,6 @@ footer {
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
