--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ p {
     font-size: 16px;
 }
 
-section {
+.hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -86,45 +86,41 @@ aside {
     background-color: #2589bd;
 }
 
-aside article {
+section{
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+.search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+.online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
-main figure {
+.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
