--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* This is the header section */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,6 +25,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
+/* This section contains the navigation links to the article of the page including its font-family on how it is displayed on the page */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -69,12 +71,13 @@ p {
     margin-left: 25px;
 }
 
+/* This is the main portion of the page, which contains the articles */
 main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
+/* This aside class provide minor details on the side of the page away from the main */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -85,7 +88,7 @@ aside {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* This is the section of the page with details how everything should look */
 section{
     margin-bottom: 32px;
     color: #ffffff;
@@ -101,8 +104,8 @@ section img {
     margin: 10px auto;
     max-width: 150px;
 }
-
-.search-engine-optimization {
+/* This is the article of the page inside the main */
+article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -111,51 +114,17 @@ section img {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+/* Contains the size of the all images inside the article */
+article img {
     max-height: 200px;
 }
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+/* Contains the h2 font details inside the article */
+article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* This is the footer of the page */
 footer {
     padding: 30px;
     clear: both;
