--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* This is the h1 inside the header semantic element */
 header h1 {
     display: inline-block;
     font-size: 48px;
